# fraud-detection-service

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  artifacts.dvc  data.dvc  docker-compose.yml  pyproject.toml  requirements.txt
.dvc/: config
artifacts/: .gitignore  feature_order.json  feature_order.json.dvc  gan_discriminator.pth  gan_discriminator.pth.dvc  gan_feature_order.json  gan_scaler_stats.json  lgb_model.joblib  lgb_model.txt  lgb_model.txt.dvc  lgbm_gan_aug.joblib  lgbm_gan_aug.txt  lgbm_gan_aug.txt.dvc  lgbm_gan_feature_order.json  lgbm_gan_feature_order.json.dvc  model_metadata.json  preprocessing_stats.json
data/: .gitignore  merged_test_df.parquet.dvc  sample_transactions.csv
notebooks/: checkpoint2_v3.ipynb  checkpoint3_v2.ipynb
src/: app.py  cli.py  config.py  explainability.py  gan.py  inference.py  main.py  preprocessing.py
tests/: test_api.py  test_preprocessing.py
